# samplecrate

./: .gitignore  CMakeLists.txt  README.md  build-android.sh  build-rtmidi-mingw.sh  build-samplecrate-mingw.sh  build-sfizz-mingw.sh  build-windows.sh  imgui.ini  input_mappings.c  input_mappings.h  lcd.c  lcd.h  main.cpp  medness_performance.cpp  medness_performance.h  medness_sequence.cpp  medness_sequence.h  medness_sequencer.cpp  medness_sequencer.h  medness_track.cpp  medness_track.h  midi.c  midi.h  midi_file_pad_player.cpp  midi_file_pad_player.h  midi_file_player.cpp  midi_file_player.h  midi_output.c  midi_output.h  midi_sequence_manager.cpp  midi_sequence_manager.h  midi_sequence_player.cpp  midi_sequence_player.h  midi_sysex.c  midi_sysex.h  package-windows.sh  regroove_effects.c  regroove_effects.h  samplecrate.ini  (+17 more)
android/: .gitignore  README.md  copy-libs.sh  gradle.properties  gradlew  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/samplecrate/app/: SamplecrateActivity.java
android/app/src/main/java/nl/gbraad/samplecrate/app/: SamplecrateActivity.java
android/app/src/main/java/org/libsdl/app/: README.md
android/app/src/main/res/mipmap-hdpi/: .gitkeep
android/app/src/main/res/mipmap-mdpi/: .gitkeep
android/app/src/main/res/mipmap-xhdpi/: .gitkeep
android/app/src/main/res/mipmap-xxhdpi/: .gitkeep
android/app/src/main/res/mipmap-xxxhdpi/: .gitkeep
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: device_filter.xml
assets/: example.sfz
docs/: BUILDING-WINDOWS.md  sample_mode_integration.md  sfz_builder.md
